# xhs-to-youtube

./: .gitignore  AGENTS.md  README.md  __init__.py  auth_url.txt  core.py  gui.py  interactive.py  main.py  pyproject.toml  setup.sh  test.txt  test_flow.py  upload.sh  uploaded.json  video_list.json  xhs-bot.service
config/: config.example.json  config.json
data/: cat_videos.json  reupload_list.json  timezone_cache.json  uploaded.json  video_list.json
data/地理位置 2025-12-02_2026-03-02 jack chen/: 图表数据.csv  总计.csv  表格数据.csv
data/观看者年龄_观看者性别 2026-02-02_2026-03-02 jack chen/: 表格数据.csv
docs/: deploy-handoff.md  server-execution.md
scripts/: README_EMAIL.md  email_config.example.sh  send_digest_email.py  setup_email.sh
src/: __init__.py  analyze.py  bot.py  cli.py  config.py  core.py  download.py  fetch.py  interactive.py  models.py  notification.py  schedule.py  spiritual_content.py  translate.py  upload.py  web.py
src/static/: app.css
src/templates/: index.html
src/utils/: retry.py
tests/: conftest.py  test_flow.py  test_spiritual_content.py  test_web.py
xhs_to_youtube.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
