[project]
name = "xhs-to-youtube"
version = "1.5.0"
description = "小红书视频搬运到 YouTube"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "duoban"}
]
keywords = ["xiaohongshu", "youtube", "video", "transfer"]

dependencies = [
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
translate = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
xhs2yt = "src.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["py.typed"]
